# vebeg_scraper

./: .dev-env  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit.yml  Dockerfile  README.rst  docker-compose.yml  logging.yml  pyproject.toml  start.sh
postgres/: Dockerfile  start.sql
tests/: listing.html  listings.html  main_page.html  proxy_test.py  results.html  test_categories.py  test_json_serializer.py  test_listing_model.py  test_parsers.py  test_vebeg_scraper.py
vebeg_scraper/: categories.json  main.py  models.py  parser.py  proxy.py  settings.py
vebeg_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vebeg_scraper/serializer/: json_serializer.py
vebeg_scraper/serializer/postgres_serializer/: postgress_serializer.py
